cmake_minimum_required(VERSION 3.27)
project(Serena_Zanon_887050_1_assignment)

set(CMAKE_CXX_STANDARD 17)

add_executable(Serena_Zanon_887050_1_assignment
        utilityImplementation.cpp
        utility.h
        pageRankColumnWise.cpp
        columnSingle.cpp
        matrixSingle.cpp
        dataStructureSize.cpp
        pageRankMatrix.cpp
)
